cmake_minimum_required(VERSION 3.20)
project(MySniffer VERSION 1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
add_subdirectory(3rdparty/aixlog)
add_subdirectory(3rdparty/boost)
add_subdirectory(3rdparty/QHexEdit)
add_subdirectory(3rdparty/QHexView)
add_subdirectory(3rdparty/qt-collapsible-section)
add_subdirectory(3rdparty/span_ext)
add_subdirectory(3rdparty/npcap)
add_subdirectory(src)
